--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,6 @@ a {
   display: flex;
   height: 250px;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   text-align: center;
 }
@@ -54,7 +53,7 @@ a {
   height: 250px;
   display: flex;
   justify-content: center;
-  align-items: center;
+
   flex-direction: row;
 }
 
@@ -70,11 +69,23 @@ a {
   width: 375px;
   height: 100vh;
   flex-direction: column;
-  border: 1px solid;
 }
 
 .search-box {
-  height: 20px;
+  height: 2.5rem;
+  border-radius: 1.5rem;
+  border: none;
+  background: lightgray;
+  text-indent: 0.8rem;
+}
+.search-box:focus {
+  height: 2.5rem;
+  border-radius: 1.5rem;
+  border: none;
+  background: rgb(19, 19, 19);
+  text-indent: 0.8rem;
+  color: white;
+  
 }
 
 .main-head {
